--- a/vintra_dead_juice_5954/package.json
+++ b/vintra_dead_juice_5954/package.json
@@ -13,8 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-loaders-kit": "^0.1.3",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^0.2.3",
     "react-slideshow-image": "^4.2.1",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
